--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+== 0.2.0 - ???
+* Converted to C code for performance.
+ 
 == 0.1.3 - 21-Oct-2013
 * Fixed INVALID_HANDLE_VALUE for 64-bit versions of Ruby.
 * Added Rake as a development dependency.
