--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
-== 0.2.0 - ???
+== 0.2.0 - 30-Mar-2015
 * Converted to C code for performance.
 * The NIO.readlines method now accepts an optional event object as
   an argument.
+* Some documentation updates.
  
 == 0.1.3 - 21-Oct-2013
 * Fixed INVALID_HANDLE_VALUE for 64-bit versions of Ruby.
