--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 * Converted to C code for performance.
 * The NIO.readlines method now accepts an optional event object as
   an argument.
+* A negative offset value will now raise an ArgumentError.
 * Some documentation updates.
  
 == 0.1.3 - 21-Oct-2013
