--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+== 0.2.1 - ???
+* Fixed some build warnings on mingw32.
+
 == 0.2.0 - 30-Mar-2015
 * Converted to C code for performance.
 * The NIO.readlines method now accepts an optional event object as
